force-app/main/default/objects/PDRI__Test_Result__c/fields/PDRI__Test_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Test_Class_Name__c</fullName>
    <label>Test Class Name</label>
    <type>TextArea</type>
</CustomField>